--- a/16-test-homework/src/style.css
+++ b/16-test-homework/src/style.css
@@ -1,6 +1,4 @@
-.homework {
-  color: red;
-  background: url('./img.jpg');
-    padding: 50px;
-    font-size: 50px;
+.hello {
+    color: red;
+    background: url('./icon.jpg');
   }
